--- a/Telco_exploration.ipynb
+++ b/Telco_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "1db259ae",
    "metadata": {},
    "outputs": [
@@ -85,13 +85,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "Telco = pd.read_csv (r'/Users/mindyshiben/codeup-data-science/Telco.csv')\n",
+    "Telco = pd.read_csv (r'/Users/mindyshiben/codeup-data-science/Telco/Telco.csv')\n",
     "print (Telco)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "4cb05358",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "01653e65",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "562397d2",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
        "1870"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "f360d9d7",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
        "5179"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "a6e036e3",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
        "0.27"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,30 +997,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "ca73b3fa",
+   "execution_count": 12,
+   "id": "b2183895",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'groupby' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/s4/hmz6ljm533vgpm_bhv59yw0m0000gn/T/ipykernel_1525/4092486990.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgroupby\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchurned\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpayment_type\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'groupby' is not defined"
+     "data": {
+      "text/plain": [
+       "7049"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Telco.total_charges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3cc24cfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 7049 entries, 0 to 7048\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   customer_id             7049 non-null   object \n",
+      " 1   gender                  7049 non-null   object \n",
+      " 2   is_senior_citizen       7049 non-null   int64  \n",
+      " 3   partner                 7049 non-null   object \n",
+      " 4   dependents              7049 non-null   object \n",
+      " 5   phone_service           7049 non-null   int64  \n",
+      " 6   internet_service        7049 non-null   int64  \n",
+      " 7   contract_type           7049 non-null   int64  \n",
+      " 8   payment_type            7049 non-null   object \n",
+      " 9   monthly_charges         7049 non-null   float64\n",
+      " 10  total_charges           7038 non-null   float64\n",
+      " 11  churn                   7049 non-null   object \n",
+      " 12  tenure                  7049 non-null   float64\n",
+      " 13  is_female               7049 non-null   bool   \n",
+      " 14  has_churned             7049 non-null   bool   \n",
+      " 15  has_internet            7049 non-null   bool   \n",
+      " 16  has_phone               7049 non-null   bool   \n",
+      " 17  has_phone_and_internet  7049 non-null   bool   \n",
+      " 18  partner_dependents      7049 non-null   int64  \n",
+      " 19  monthly_average         7049 non-null   float64\n",
+      " 20  validate                7049 non-null   bool   \n",
+      " 21  phone_details           7049 non-null   object \n",
+      " 22  rounded_tenure          7049 non-null   float64\n",
+      " 23  type_of_service         7049 non-null   object \n",
+      "dtypes: bool(6), float64(5), int64(5), object(8)\n",
+      "memory usage: 1.0+ MB\n"
      ]
     }
    ],
    "source": [
-    "groupby.churned.payment_type"
+    "Telco.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2183895",
+   "id": "4f8ca1b1",
    "metadata": {},
    "outputs": [],
    "source": []
